--- a/requirements.txt
+++ b/requirements.txt
@@ -1,164 +1,11 @@
-adium-theme-ubuntu==0.3.4
-appengine==1.8.0.2
-attrs==15.2.0
-awsebcli==3.10.1
-backports-abc==0.4
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.5.0.1
-beautifulsoup4==4.5.1
-blessed==1.14.2
-blinker==1.3
-botocore==1.5.33
-cached-property==1.3.0
-cement==2.8.2
-certifi==2016.8.31
-chardet==2.3.0
-click==6.6
-colorama==0.3.7
-colorlover==0.2.1
-compizconfig-python==0.9.12.2
-conda==4.2.7
-configparser==3.5.0
-cryptography==1.2.3
-cufflinks==0.8.2
-cycler==0.9.0
-Cython==0.25.1
-dask==0.12.0
-data==0.4
-decorator==4.0.6
-dirspec==13.10
-Django==1.8.8
-docker-compose==1.8.1
-docker-py==1.7.2
-docker-pycreds==0.2.1
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.13.1
-editdistance==0.3.1
-entrypoints==0.2.2
-enum34==1.1.2
-Flask==0.11.1
-Flask-HTTPAuth==3.2.2
-funcsigs==1.0.2
-functools32==3.2.3.post2
-future==0.16.0
-gdbn==0.1
-gnumpy==0.2
-graphviz==0.5.1
-h5py==2.6.0
-html5lib==0.999
-httpauth==0.3
-httplib2==0.9.1
-idna==2.0
-ipaddress==1.0.16
-ipykernel==4.5.0
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
+appdirs==1.4.3
+click==6.7
+Flask==0.12.1
 itsdangerous==0.24
-Jinja2==2.8
-jmespath==0.9.2
-joblib==0.10.3
-jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.0
-Keras==1.1.0
-keyring==7.3
-Lasagne==0.1
-launchpadlib==1.10.3
-lazr.restfulclient==0.13.4
-lazr.uri==1.0.3
-lutorpy==1.3.7
-lxml==3.5.0
-MarkupSafe==0.23
-matplotlib==1.5.1
-mistune==0.7.3
-mock==2.0.0
-nbconvert==4.2.0
-nbformat==4.1.0
-networkx==1.11
-nltk==3.2.1
-nolearn==0.6.0
-notebook==4.2.3
-numpy==1.11.2
-oauth==1.0.1
-oauth2==1.9.0.post1
-oauth2client==4.0.0
-oauthlib==1.0.3
-opencv-python==3.1.0.3
-PAM==0.4.2
-pandas==0.19.0
-passlib==1.7.1
-pathlib2==2.1.0
-pathspec==0.5.0
-pbr==1.10.0
-pexpect==4.0.1
-pickleshare==0.7.4
-Pillow==3.1.2
-piston-mini-client==0.7.5
-plotly==1.12.9
-prompt-toolkit==1.0.7
-protobuf==3.0.0
-psutil==3.4.2
-ptyprocess==0.5
-pyasn1==0.1.9
-pyasn1-modules==0.0.7
-pycrypto==2.6.1
-pycurl==7.43.0
-pydot-ng==1.0.0
-Pygments==2.1.3
-pygobject==3.20.0
-PyJWT==1.3.0
-pyOpenSSL==0.15.1
-pyparsing==2.1.10
-pyserial==3.0.1
-Pyste==0.9.10
-pytesseract==0.1.6
-python-apt==1.1.0b1
-python-dateutil==2.4.2
-pytz==2014.10
-pywebview==1.5
-pyxdg==0.25
-PyYAML==3.12
-pyzmq==15.2.0
-qtconsole==4.2.1
-redis==2.10.5
-requests==2.7.0
-rsa==3.4.2
-scikit-image==0.12.3
-scikit-learn==0.18
-scipy==0.17.0
-SecretStorage==2.1.3
-semantic-version==2.5.0
-service-identity==16.0.0
-simplegeneric==0.8.1
-simplejson==3.8.1
-singledispatch==3.4.0.3
+Jinja2==2.9.5
+MarkupSafe==1.0
+packaging==16.8
+pkg-resources==0.0.0
+pyparsing==2.2.0
 six==1.10.0
-sklearn==0.0
-SQLAlchemy==1.1.6
-tabulate==0.7.5
-tensorflow==0.11.0rc1
-termcolor==1.1.0
-terminado==0.6
-tesserocr==2.1.3
-texttable==0.8.4
-Theano==0.8.2
-toolz==0.8.0
-tornado==4.4.1
-traitlets==4.3.0
-Twisted==16.0.0
-ubuntu-kylin-software-center==1.3.10
-unity-china-photo-scope==1.0
-unity-lens-photos==1.0
-wadllib==1.3.2
-wcwidth==0.1.7
-websocket-client==0.37.0
-Werkzeug==0.11.11
-widgetsnbextension==1.2.6
-yelp==1.0.2
-youtube-dl==2016.2.22
-zim==0.65
-zope.interface==4.1.3
+Werkzeug==0.12.1
